<resources>
    <string name="app_name">Diabetes Health App</string>
    <string name="glucose_tracker">Glucose Tracker</string>
    <string name="recipes_diet">Best Type of Foods</string>
    <string name="notification_reminder">Notification Reminder</string>
    <string name="motivation">Motivation</string>
    <string name="exit">Exit</string>
    <string name="record_blood_glucose_level">Record Blood Glucose Level</string>
    <string name="recommended_range">Recommended Glucose Level Range</string>
    <string name="track_history">Track/History</string>
    <string name="home">Home</string>
    <string name="exit2">Exit</string>
    <string name="blood_glucose_level">e.g 90</string>
    <string name="date">e.g 11/22/2022</string>
    <string name="des">Des</string>
    <string name="name">Name</string>
</resources>